[package]
name = "kaptn-cli"
version = "0.2.7"
edition = "2021"
description = "CLI for the Kaptn Transfer-Hook Framework"
repository = "https://github.com/tonton-sol/kaptn"
license = "Apache-2.0"

[[bin]]
name = "kaptn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
heck = "0.5.0"
solana-cli-config = "2.0.9"
solana-sdk = "2.0.8"
toml = "0.8.19"
