[package]
name = "kaptn-lang"
version = "0.1.0"
description = "Kaptn Transfer Hook Framework"
license = "Apache-2.0"
edition = "2021"

[dependencies]
spl-transfer-hook-interface = "0.7.0"
spl-tlv-account-resolution = "0.7.0"
arrayref = "0.3.8"
solana-program = "2.0.3"
spl-token-2022 = { version = "4.0.1", features = ["no-entrypoint"] }
spl-type-length-value = "0.5.0"
kaptn-syn = { path = "syn" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
