[package]
name = "kaptn-macros"
version = "0.1.2"
description = "Macros for Kaptn Transfer-Hook Framework"
repository = "https://github.com/tonton-sol/kaptn"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
