[package]
name = "kaptn-derive-extrametas"
version = "0.2.7"
edition = "2021"
description = "ExtraMetas Derive for the Kaptn Transfer-Hook Framework"
repository = "https://github.com/tonton-sol/kaptn"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
